--- a/styleflex.css
+++ b/styleflex.css
@@ -27,3 +27,7 @@
 .justify-content-flex-end{
 	justify-content: flex-end;
 }
+
+.flex-direction-column-reverse{
+	flex-direction: column-reverse;
+}
