--- a/responsive.css
+++ b/responsive.css
@@ -1,8 +1,253 @@
 
-@media only screen and (max-width:600px) {
+@media only screen
+and (min-width:600px )
+and (max-width:1000px) {
 
 
-  .shoppingcartlogo-mobile {
+.border-bottom{
+  border-bottom: none;
+}
+
+.header-tablet{
+  display: flex;
+  justify-content:  space-around;
+  align-items: center;
+  height: inherit;
+}
+
+header .alohalogotablet {
+  order:1;
+  width: 20%;
+}
+header .shoppingcartlogotablet {
+  order:3;
+  width:10%;
+  background-size: 35%;
+  background-position: 3.1rem 1.5rem;
+  padding: 2rem;
+
+}
+header .ctatablet{
+  order:2;
+  border: none;
+  width: 50%;
+}
+.alohalogotablet img {
+  width: 100%;
+}
+.shoppingcartlogo img {
+  width: 50%;
+}
+.bannertablet{
+padding-top: 8rem;
+}
+
+.mentrendsglassestablet {
+  display:flex;
+}
+.menstablet{
+  margin:0 0.55rem 0.25rem 0;
+  width: 50%;
+}
+.trendsglassestablet{
+  width: 50%;
+}
+.trendstablet{
+  margin: 0 0.25rem 0.25rem 0;
+}
+.glassestablet{
+  margin: 0 0 0.25rem 0.25rem;
+}
+.salesbagswomentablet{
+  display: flex;
+}
+.salesbagstablet{
+  width:50%;
+}
+.salestablet{
+  margin: 0.25rem 0.25rem 0 0;
+}
+.bagstablet{
+  margin:0.25rem 0 0 0.25rem;
+}
+.womenstablet{
+  width:50%;
+  margin: 0.25rem 0 0 0.5rem;
+  background-position: top;
+
+}
+.footerTablet{
+  display:flex;
+  justify-content: space-between;
+}
+.productsTablet {
+  display: flex;
+}
+
+.companyContactTablet{
+  text-align: left;
+  padding-left: 1rem;
+}
+
+.SocialMediaTablet{
+  flex-direction: column;
+  padding-right: 3rem;
+}
+.SocialMediaName {
+  display:list-item;
+}
+}
+
+
+
+
+
+@media only screen
+and (min-width:1000px) {
+
+.display-block-desktop{
+  display: block;
+}
+.border-bottom{
+  border-bottom: none;
+}
+
+.header-desktop{
+  display: flex;
+  justify-content:  space-around;
+  align-items: center;
+  height: inherit;
+}
+
+header .alohalogodesktop {
+  order:1;
+  width: 20%;
+
+}
+header .shoppingcartlogodesktop {
+    order:3;
+    width:10%;
+    background-size: 30%;
+    background-position: 8.3rem 2rem ;
+    padding: 3rem;
+}
+
+header .ctadesktop{
+  order:2;
+  border: none;
+  width: 50%;
+}
+
+.alohalogodesktop img {
+  width: 80%;
+}
+
+.bannerdesktop {
+background: linear-gradient(
+    rgba(0,0,0,0.3),
+    rgba(0,0,0,0.3)),
+  url("assets/images/banner-girl.png"), url("assets/images/flower-bkgd.jpg");
+  background-repeat:no-repeat, no-repeat;
+  height:65vh;
+  background-position: center, center 8rem;
+  background-size: 100%, 15rem;
+padding-top: 2rem;
+}
+
+.mentrendsglassesdesktop {
+  display:flex;
+}
+.mensdesktop{
+  margin:0 0.55rem 0.25rem 0;
+  width: 50%;
+  padding-top: 9rem;
+  padding-bottom: 9rem;
+  align-self: center;
+}
+.trendsglassesdesktop{
+  width: 50%;
+}
+.trendsdesktop{
+  margin: 0 0.25rem 0.25rem 0;
+  align-self: center;
+  padding-top: 9rem;
+  padding-bottom: 9rem;
+
+}
+.glassesdesktop{
+  margin: 0 0 0.25rem 0.25rem;
+  align-self: center;
+  padding-top: 9rem;
+  padding-bottom: 9rem;
+
+}
+.salesbagswomendesktop{
+  display: flex;
+
+}
+.salesbagsdesktop{
+  width:50%;
+}
+.salesdesktop{
+  margin: 0.25rem 0.25rem 0 0;
+  align-self: center;
+  padding-top: 9rem;
+  padding-bottom: 9rem;
+
+}
+.bagsdesktop{
+  margin:0.25rem 0 0 0.25rem;
+  align-self: center;
+  padding-top: 9rem;
+  padding-bottom: 9rem;
+
+}
+.womensdesktop{
+  width:50%;
+  margin: 0.25rem 0 0 0.5rem;
+  align-self: center;
+  padding-top: 9rem;
+  padding-bottom: 9rem;
+  background-position: top;
+
+}
+.productsDesktop {
+  display: flex;
+}
+
+.footerdekstop{
+  display:flex;
+  justify-content: space-between;
+}
+
+.companyContactdesktop{
+  text-align: left;
+  padding-left: 1rem;
+}
+
+.SocialMediadesktop{
+  flex-direction: column;
+  padding-right: 3rem;
+}
+.SocialMediaNamedesktop {
+  display:list-item;
+}
+
+
+
+}
+
+
+
+
+
+
+
+
+
+
+
+/*  .shoppingcartlogo-mobile {
    width: 150%;
  }
  .alohalogo-mobile {
@@ -80,5 +325,4 @@
     .email p{
       display: inline;
 
-    }
- }
+    }*/
