--- a/styleflex.css
+++ b/styleflex.css
@@ -8,6 +8,9 @@
 .align-items-center {
 	align-items: center;
 }
+.align-items-flex-start{
+	align-items: flex-start;
+}
 .text-align-center{
 	text-align: center;
 }
@@ -18,16 +21,15 @@
   justify-content: center;
 }
 
-.justify-content-center{
-	justify-content: center;
-}
 .justify-content-space-around {
 	justify-content: space-around;
 }
 .justify-content-flex-end{
 	justify-content: flex-end;
 }
-
+.justify-content-flex-start{
+	justify-content: flex-start;
+}
 .flex-direction-column-reverse{
 	flex-direction: column-reverse;
 }
