--- a/responsive.css
+++ b/responsive.css
@@ -23,10 +23,11 @@ header .shoppingcartlogotablet {
   order:3;
   width:10%;
   background-size: 35%;
-  background-position: 3.1rem 1.5rem;
+  background-position: center right;
   padding: 2rem;
-
 }
+
+
 header .ctatablet{
   order:2;
   border: none;
@@ -38,6 +39,8 @@ header .ctatablet{
 .shoppingcartlogo img {
   width: 50%;
 }
+
+
 .bannertablet{
 padding-top: 8rem;
 }
@@ -128,7 +131,7 @@ header .shoppingcartlogodesktop {
     order:3;
     width:10%;
     background-size: 30%;
-    background-position: 8.3rem 2rem ;
+    background-position: center right;
     padding: 3rem;
 }
 
