--- a/src/scss/sheet.scss
+++ b/src/scss/sheet.scss
@@ -1,4 +1,3 @@
-
 h3 {
   font-size: 35px;
 }
@@ -20,7 +19,7 @@ header .alohalogo {
 }
 header .shoppingcartlogo {
   order:2;
-  background: url("assets/images/cart-icon.svg") no-repeat;
+  // background: url("../assets/cart-icon.svg") no-repeat;
   background-position: center  right ;
   background-size: 35%;
   width: 35%;
@@ -51,7 +50,7 @@ header .cta{
   background: linear-gradient(
     rgba(0,0,0,0.3),
     rgba(0,0,0,0.3)),
-  url("assets/images/banner-girl.png"), url("assets/images/flower-bkgd.jpg");
+  url("../assets/banner-girl.png"), url("../assets/flower-bkgd.jpg");
   background-repeat:repeat, no-repeat;
   height:60vh;
   background-position: center, center 8rem;
@@ -70,7 +69,7 @@ header .cta{
   background: linear-gradient(
     rgba(0,0,0,0.3),
     rgba(0,0,0,0.3)),
-  url("assets/images/mens-category.jpg") no-repeat;
+  url("../assets/mens-category.jpg") no-repeat;
   margin:0 0 0.25rem 0;
   background-position: center;
   background-size: cover;
@@ -79,7 +78,7 @@ header .cta{
   background: linear-gradient(
     rgba(0,0,0,0.3),
     rgba(0,0,0,0.3)),
-  url("assets/images/trends-category.jpg") no-repeat;
+  url("../assets/trends-category.jpg") no-repeat;
   margin: 0.25rem 0.25rem 0.25rem 0;
   width:50%;
   background-position: center;
@@ -89,7 +88,7 @@ header .cta{
   background: linear-gradient(
     rgba(0,0,0,0.3),
     rgba(0,0,0,0.3)),
-  url("assets/images/glasses-category.jpg")no-repeat;
+  url("../assets/glasses-category.jpg")no-repeat;
   margin: 0.25rem 0 0.25rem 0.25rem;
   width:50%;
   background-position: center;
@@ -99,7 +98,7 @@ header .cta{
   background: linear-gradient(
     rgba(0,0,0,0.3),
     rgba(0,0,0,0.3)),
-  url("assets/images/sale-category.jpg")no-repeat;
+  url("../assets/sale-category.jpg")no-repeat;
   margin: 0.25rem 0.25rem 0.25rem 0;
   width:50%;
 background-position: center;
@@ -109,7 +108,7 @@ background-position: center;
   background: linear-gradient(
     rgba(0,0,0,0.3),
     rgba(0,0,0,0.3)),
-  url("assets/images/bags-category.jpg")no-repeat;
+  url("../assets/bags-category.jpg")no-repeat;
   margin: 0.25rem 0 0.25rem 0.25rem;
   width:50%;
   background-position: center;
@@ -119,7 +118,7 @@ background-position: center;
   background: linear-gradient(
     rgba(0,0,0,0.3),
     rgba(0,0,0,0.3)),
-  url("assets/images/womens-category.jpg")no-repeat;
+  url("../assets/womens-category.jpg")no-repeat;
   margin: 0.25rem 0 0 0;
   background-position: top;
   background-size: cover;
@@ -131,7 +130,7 @@ background-position: center;
   background: linear-gradient(
     rgba(0,0,0,0.3),
     rgba(0,0,0,0.3)),
-  url("assets/images/wave-bkgd.jpg") bottom no-repeat;
+  url("../assets/wave-bkgd.jpg") bottom no-repeat;
 	background-size: cover;
   margin-bottom: 5px;
 }
@@ -177,6 +176,10 @@ footer {
 }
 .fa:hover{
   color:#969696;
+}
+
+.fa-shopping-cart{
+	color: black;
 }
 .SocialMediaIcon{
 	width: 40px;
