added position back on header

--- a/src/scss/sheet.scss
+++ b/src/scss/sheet.scss
@@ -140,7 +140,7 @@ background-position: center;
   margin-bottom: 5px;
   height: 250px;
 }
-input[type="text"]{
+input[type="email"]{
 width: 220px;
 border: none;
 border-radius: 200px;
@@ -223,15 +223,15 @@ cta li {
   margin: auto;
 }
 
-// header{
-//   overflow: hidden;
-//   position: fixed; 
-//   top: 0;
-//   width: 100%;
-//   background-color: white;
-//   z-index:100;
-// }
+header{
+  overflow: hidden;
+  position: fixed; 
+  top: 0;
+  width: 100%;
+  background-color: white;
+  z-index:100;
+}
 
-// .banner{
-//   margin-top: 100px; /* Add a top margin to avoid content overlay */
-// }
+.banner{
+  margin-top: 100px; /* Add a top margin to avoid content overlay */
+}
